z-index fixes

--- a/src/Components/Columns/Column.css
+++ b/src/Components/Columns/Column.css
@@ -2,6 +2,7 @@
 .board__column-single--wrapper {
   display: flex;
   flex-direction: column;
+  min-width: 17.5rem;
 }
   
 .board__column-indicator {
