--- a/src/Components/Modals/Modal.module.css
+++ b/src/Components/Modals/Modal.module.css
@@ -14,6 +14,7 @@ textarea:focus {
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
+  z-index: 999;
 }
 
 /* .centered {
@@ -28,6 +29,7 @@ textarea:focus {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 999;
 
   display: flex;
   flex-direction: column;
@@ -36,7 +38,6 @@ textarea:focus {
   max-width: 25rem;
   background-color: var(--bg-primary);
   color: var(--text-white);
-  z-index: 10;
   border-radius: 0.5rem;
   box-shadow: var(--box-shadow);
   padding: 1.5rem;
